# abs-ijobstat

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  abs-ijobstat9.files  abs-ijobstat9.includes
doc/: abs-stat-init.fb  firebird.txt
share/: CMakeLists.txt
share/etc/: stat.xml
share/systemd/: abs-ijobstat-4.0.service
src/: CMakeLists.txt
src/sbin/: CMakeLists.txt
src/sbin/abs-ijobstat/: ABSStatServer.cpp  ABSStatServer.hpp  ABSStatServerOptions.cpp  ABSStatServerOptions.hpp  CMakeLists.txt
