# ==============================================================================
# Advanced Batch System (ABS) CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(sbin)
